--- a/flaskr/templates/quiz/category_admin.html
+++ b/flaskr/templates/quiz/category_admin.html
@@ -1,13 +1,12 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Category</title>
-</head>
-<body>
-    <h1>Add a New Category</h1>
+{% extends 'base.html' %}
 
+{% block title %}Add Category{% endblock %}
+
+{% block header %}
+    <h1>Add a New Category</h1>
+{% endblock %}
+
+{% block content %}
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             <ul>
@@ -17,7 +16,6 @@
             </ul>
         {% endif %}
     {% endwith %}
-
 
     <form method="post">
         <div>
@@ -29,9 +27,7 @@
         </div>
     </form>
 
-
     <div>
         <a href="{{ url_for('category.view') }}">Back to Categories</a>
     </div>
-</body>
-</html>
+{% endblock %}
