--- a/flaskr/templates/quiz/category_user.html
+++ b/flaskr/templates/quiz/category_user.html
@@ -1,23 +1,21 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Categories</title>
-</head>
-<body>
-    <h1>Categories</h1>
+{% extends 'base.html' %}
 
+{% block title %}Categories{% endblock %}
+
+{% block header %}
+    <h1>Categories</h1>
+{% endblock %}
+
+{% block content %}
     <ul>
         {% for category in categories %}
-            <li>{{ category['name'] }}</li>
+            <li>
+                {{ category['name'] }}
+            </li>
         {% endfor %}
     </ul>
 
     {% if g.user and g.user['is_admin'] %}
         <a href="{{ url_for('category.add') }}">Add New Category</a>
     {% endif %}
-
-    <a href="{{ url_for('auth.logout') }}">Logout</a>
-</body>
-</html>
+{% endblock %}
