--- a/flaskr/templates/quiz/category_user.html
+++ b/flaskr/templates/quiz/category_user.html
@@ -10,7 +10,9 @@
     <ul>
         {% for category in categories %}
             <li>
-                {{ category['name'] }}
+                <a href="{{ url_for('category.view_category', category_id=category['id']) }}">
+                    {{ category['name'] }}
+                </a>
             </li>
         {% endfor %}
     </ul>
