--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -6,6 +6,10 @@
   <ul>
     {% if g.user %}
       <li><span>{{ g.user['username'] }}</span>
+      <li><a href="{{ url_for('profile.view_profile') }}">Profile</a></li>
+      <li><a href="{{ url_for('index') }}">Home</a></li>
+      <li><a href="{{ url_for('category.view') }}">Categories</a></li>
+      <li><a href="{{ url_for('profile.feedback') }}">My Quiz Feedback</a></li>
       <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
     {% else %}
       <li><a href="{{ url_for('auth.register') }}">Register</a>
