--- a/flaskr/templates/profile/feedback.html
+++ b/flaskr/templates/profile/feedback.html
@@ -1,35 +1,34 @@
 {% extends 'base.html' %}
 
-{% block title %}Your Quiz feedback{% endblock %}
+{% block title %}Your Quiz Results{% endblock %}
 
 {% block header %}
-    <h1>Your Quiz feedback</h1>
+    <h2>Your Quiz Results</h2>
 {% endblock %}
 
 {% block content %}
     {% if results %}
-        <table>
+        <table class="results-table">
             <thead>
                 <tr>
                     <th>Category</th>
                     <th>Score</th>
                     <th>Total Questions</th>
-                    <th>Date</th>
+                    <th>Date Completed</th>
                 </tr>
             </thead>
             <tbody>
                 {% for result in results %}
                     <tr>
-                        <td>{{ result['category_name'] }}</td>
+                        <td>{{ result['category_id'] }}</td>
                         <td>{{ result['score'] }}</td>
                         <td>{{ result['total_questions'] }}</td>
-                        <td>{{ result['completed_at'] | datetimeformat('%B %d, %Y %I:%M %p') }}</td>
+                        <td>{{ result['completed_at'] }}</td>
                     </tr>
                 {% endfor %}
             </tbody>
         </table>
     {% else %}
-        <p>You haven't completed any quizzes yet.</p>
+        <p class="no-results-message">You haven't completed any quizzes yet.</p>
     {% endif %}
-    <a href="{{ url_for('index') }}">Back to Home</a>
 {% endblock %}
