--- a/flaskr/templates/profile/profile.html
+++ b/flaskr/templates/profile/profile.html
@@ -3,28 +3,26 @@
 {% block title %}Profile{% endblock %}
 
 {% block header %}
-    <h1>Your Profile</h1>
+    <h2>Your Profile</h2>
 {% endblock %}
 
 {% block content %}
-    <form method="post">
-        <div>
-            <label for="username">Username:</label>
-            <input type="text" name="username" id="username" value="{{ user['username'] }}" required>
+    <form method="post" action="{{ url_for('profile.view_profile') }}" class="profile-form">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" value="{{ user['username'] }}" readonly>
         </div>
 
-        <div>
-            <label for="email">Email:</label>
-            <input type="email" name="email" id="email" value="{{ user['email'] }}" required>
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" value="{{ user['email'] }}">
         </div>
 
-        <div>
-            <label for="last_name">Last Name:</label>
-            <input type="text" name="last_name" id="last_name" value="{{ user['last_name'] }}">
+        <div class="form-group">
+            <label for="last_name">Last Name</label>
+            <input type="text" id="last_name" name="last_name" value="{{ user['last_name'] }}">
         </div>
 
-        <button type="submit">Update Profile</button>
+        <button type="submit" class="btn">Save Changes</button>
     </form>
-
-    <a href="{{ url_for('index') }}">Back to Home</a>
 {% endblock %}
