--- a/flaskr/templates/quiz/category_user.html
+++ b/flaskr/templates/quiz/category_user.html
@@ -3,28 +3,17 @@
 {% block title %}Categories{% endblock %}
 
 {% block header %}
-    <h1>Categories</h1>
+    <h2>Select a Category</h2>
 {% endblock %}
 
 {% block content %}
-    <ul>
+    <ul class="category-list">
         {% for category in categories %}
             <li>
-                {% if g.user and g.user['is_admin'] %}
-                    <a href="{{ url_for('category.manage_category', category_id=category['id']) }}">
-                        {{ category['name'] }}
-                    </a>
-                {% else %}
-                    <a href="{{ url_for('category.view_category', category_id=category['id']) }}">
-                        {{ category['name'] }}
-                    </a>
-                {% endif %}
+                <a href="{{ url_for('category.select_num_questions', category_id=category['id']) }}">
+                    {{ category['name'] }}
+                </a>
             </li>
         {% endfor %}
     </ul>
-
-    {% if g.user and g.user['is_admin'] %}
-        <a href="{{ url_for('category.add') }}">Add New Category</a>
-    {% endif %}
 {% endblock %}
-
